<resources>
    <string name="app_name">Android Arch</string>
    <string name="title_activity_new_note">NewNote</string>
    <string name="title_activity_add_note">Add New Note</string>
    <string name="action_settings">Settings</string>

    <string name="submit_btn">submit</string>
    <string name="priority_text_view">Priority</string>
    <string name="author_text_view">Author</string>
    <string name="head_text_view">Title</string>
    <string name="body_text_view">Details</string>

    <string name="author_text_view_hint">ex: Mohamed Na..</string>
    <string name="head_text_view_hint">ex: Task Title</string>
    <string name="body_text_view_hint">max 120 characters</string>
</resources>


